[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["kavisek <kavi.skhon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^1.26.2"
pandas = "^2.1.3"
seaborn = "^0.13.0"
matplotlib = "^3.8.2"
ipykernel = "^6.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
